@@ -36,6 +36,7 @@ Changelog
  * Fix: Ordering pages in the explorer by reverse 'last updated' time now puts pages with no revisions at the top
  * Fix: WagtailTestUtils now works correctly on custom user models without a ``username`` field (Adam Bolfik)
  * Fix: Logging in to the admin as a user with valid credentials but no admin access permission now displays an error message, rather than rejecting the user silently
+ * Fix: StreamBlock HTML rendering now handles non-ASCII characters correctly on Python 2 (Mikalai Radchuk)
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
